notification page done

--- a/src/index.css
+++ b/src/index.css
@@ -47,5 +47,5 @@ body a {
   --dark-grey-blue: #3a4e6f;
   --dark-lime-green: #86c306;
   --frog-green: #7bb502;
-  --denim-blue: #28437c;
+  --denim-blue: #b2b4b7;
 }
