working in user chat section

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@ body a {
   --background-color-right: "#f5f5f5";
   --background-grey: #f7f7fb;
   --status-grey: #545454;
+  --chat-background-color: #ededed;
 
   --blue-grey: #637696;
   --light-blue: #3c5a9a;
